--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
 
   app:
     image: golang:1.22
@@ -29,3 +29,6 @@ services:
       - DB_PASSWORD=root
       - DB_NAME=root
       - DB_PORT=5432
+
+volumes:
+  postgres_data:
